<resources>
    <string name="app_name">Diary1</string>
    <string name="splash_text1">오늘의 사연을</string>
    <string name="splash_text2">기록하자</string>
    <string name="title_main">Diary</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="register_profile_text">사진을 클릭해 프로필사진을 추가해요</string>
    <string name="register_name">Name</string>
    <string name="register_name_hint">홍길동</string>
    <string name="register_id">ID</string>
    <string name="register_id_hint">6 ~ 10글자 숫자와 영소문자</string>
    <string name="register_pw">PW</string>
    <string name="register_pw_hint">12 ~ 20글자 숫자와 영소문자</string>
    <string name="register_check_pw">Check PW</string>
    <string name="register_check_pw_hint">비밀번호를 한번 더 입력하세요</string>
    <string name="register_btn_register">회원가입</string>

    <string name="title_main_page">왜 안바껴...</string>
    <string name="title_daily_diary_list">나의 일기</string>
    <string name="title_post_diary">오늘은</string>
    <string name="title_my_diary">기억하고 싶은 날</string>

    <string name="bottom_button_diary_list">일기 목록</string>
    <string name="bottom_button_diary_post">일기 쓰기</string>
    <string name="bottom_button_diary_my">관심 사연</string>
    <string name="bottom_button_diary_setting">설정</string>

    <string name="post_main_text">오늘 하루는 어땠나요?</string>
    <string name="post_tv_date_time">날짜가 바뀌어요</string>
    <string name="post_tv_select_date">Select</string>
    <string name="post_input_title">Title</string>
    <string name="post_input_content">특별했던 오늘을 남겨 보아요</string>
    <string name="post_btn_submit">기록하기</string>
    <string name="post_content_hint">나는 오늘 아침에 일어나 빵을 먹고 친구와 약속이 있는 장소로 갔다. 거기서 우연히....</string>

    <string name="hello_setting_activity">Hello setting activity</string>
    <string name="hello_post_activity">Hello post activity</string>
    <string name="hello_detail_activity">Hello detail activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recycler_diary_list_title">일기 목록 타이틀일기 목록 타이</string>
    <string name="recycler_diary_list_content">오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 다채웠다 아싸</string>
    <string name="recycler_diary_list_date">2021–06–23 수요일</string>

    <string name="detail_text">이름님의 그날의 이야기</string>
    <string name="detail_btn_edit">수정</string>
    <string name="detail_btn_delete">삭제</string>
    <string name="detail_btn_complete">저장</string>
    <string name="detail_title">Title</string>
    <string name="detail_date">Date</string>
    <string name="detail_content">그날의 사연을 떠올려 보아요</string>
    <string name="detail_title_sample">아아아아아아아아아아11111</string>
    <string name="detail_date_sample">2021-06-25 금요일</string>
    <string name="detail_content_sample">오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 특별한 일을 적어볼까 오늘의 다채웠다 아싸</string>

    <string name="setting_profile">프로필 사진을 변경해요</string>
    <string name="setting_id_title">ID</string>
    <string name="setting_id_contnet">dkdlel66</string>
    <string name="setting_id_guide">아이디는 바꿀 수 없어요</string>
    <string name="setting_name_title">Name</string>
    <string name="setting_name_content">이름</string>
    <string name="setting_name_guide">내 이름을 변경해요</string>
    <string name="setting_pw_title">PW</string>
    <string name="setting_pw_content">12 ~ 20글자 숫자와 영소문자</string>
    <string name="setting_pw_guide">비밀번호를 변경해요</string>
    <string name="setting_check_pw_title">Check PW</string>
    <string name="setting_check_pw_guide">비밀번호를 확인해요</string>
    <string name="setting_btn_edit">수정</string>
    <string name="setting_btn_delete">탈퇴</string>
    <string name="setting_checked_pw">비밀번호가 일치해요</string>

</resources>