<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <Button
            android:id="@+id/btn_detail_edit"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/detail_btn_edit"
            android:gravity="center"
            android:textSize="10dp"
            android:textColor="@color/input_text_main"
            android:textStyle="bold"
            android:background="@drawable/bg_btn_round"
            android:backgroundTint="@color/input_submit_button"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_detail_delete"
            />

        <Button
            android:id="@+id/btn_detail_delete"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/detail_btn_delete"
            android:gravity="center"
            android:textSize="10dp"
            android:textColor="@color/input_text_main"
            android:textStyle="bold"
            android:background="@drawable/bg_btn_round"
            android:backgroundTint="@color/input_submit_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:gravity="center"
            android:text="@string/detail_title_sample"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/main_text_color"
            android:backgroundTint="@color/main_background"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/btn_detail_delete"
            />

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_date_sample"
            android:gravity="right"
            android:textStyle="bold"
            android:textSize="13dp"
            android:textColor="@color/main_sub_text_color"
            android:backgroundTint="@color/main_background"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
            />

        <ScrollView
            android:id="@+id/vg_detail_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="90dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_date"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tv_detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/detail_content_sample"
                    android:textColor="@color/main_text_color"
                    android:textSize="14dp"
                    android:gravity="top"
                    android:singleLine="false"
                    android:background="@color/main_background"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_detail_complete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/detail_btn_complete"
            android:textStyle="bold"
            android:textColor="@color/input_text_main"
            android:background="@drawable/bg_btn_round"
            android:backgroundTint="@color/input_submit_button"
            app:layout_constraintTop_toBottomOf="@id/vg_detail_scroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>