<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.DetailFragment"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <EditText
            android:id="@+id/et_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="none"
            android:editable="false"
            android:singleLine="false"
            android:gravity="center"
            android:text="@string/detail_title_sample"
            android:textStyle="bold"
            android:textColor="@color/main_text_color"
            android:backgroundTint="@color/main_background"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_date_sample"
            android:gravity="right"
            android:textStyle="bold"
            android:textSize="13dp"
            android:textColor="@color/main_sub_text_color"
            android:backgroundTint="@color/main_background"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_detail_title"
            />

        <EditText
            android:id="@+id/et_detail_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/detail_content_sample"
            android:textColor="@color/main_text_color"
            android:textSize="14dp"
            android:gravity="top"
            android:cursorVisible="false"
            android:editable="false"
            android:singleLine="false"
            android:background="@color/main_background"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_date"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>