<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vg_diary_list_top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_diary_list_content"
            >

            <TextView
                android:id="@+id/tv_diary_list_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recycler_diary_list_title"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_diary_list_date"
                />

            <TextView
                android:id="@+id/tv_diary_list_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recycler_diary_list_date"
                android:textSize="11dp"
                android:textColor="@color/main_text_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/vg_diary_list_top_container"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_diary_list_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/recycler_diary_list_content"
            android:textColor="@color/main_sub_text_color"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/vg_diary_list_top_container"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>